--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body class="body">
     <header class="header">
-        <header class="header__container container">
+        <div class="header__container container">
             
-        </header>
+        </div>
     </header>
     
     <main class="main">
